<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <TextView
        android:id="@+id/readyToScan"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_ready"
        android:textColor="#656565"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/shouldScan_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/should_scan_id_selfie"
        android:textColor="#656565"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <ImageView
        android:id="@+id/id1"
        android:layout_width="259dp"
        android:layout_height="133dp"
        android:src="@drawable/id1"
        android:text="@string/back_img_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <ImageView
        android:id="@+id/id2"
        android:layout_width="259dp"
        android:layout_height="133dp"
        android:src="@drawable/id2"
        android:text="@string/front_img_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/f_id"
        android:layout_width="259dp"
        android:layout_height="133dp"
        android:src="@drawable/f_id"
        android:text="@string/face_img_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView
        android:id="@+id/haveAcc"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:text="@string/haveAcc"
        android:textColor="@color/dark_green"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

    <TextView

        android:id="@+id/signInLink"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:text="@string/Sign_in"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="352dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="779dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_confirm_rejester"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="#02434C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
