<!-- res/layout/dialog_otp.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otp_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/general_round_container"
        android:padding="17dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/otpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textAlignment="center"
            android:textColor="#656565"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/otpContainer"
            android:layout_width="327dp"
            android:layout_height="79dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpTitle">

            <EditText
                android:id="@+id/otpDigit1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@drawable/regester_rounded"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:contentDescription="@string/otp_digit_1"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/otpDigit2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/otpDigit2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@drawable/regester_rounded"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:contentDescription="@string/otp_digit_2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/otpDigit3"
                app:layout_constraintStart_toEndOf="@+id/otpDigit1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/otpDigit3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@drawable/regester_rounded"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:contentDescription="@string/otp_digit_3"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/otpDigit4"
                app:layout_constraintStart_toEndOf="@+id/otpDigit2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/otpDigit4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@drawable/regester_rounded"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:contentDescription="@string/otp_digit_4"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/otpDigit3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/resendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/code_resend"
            android:textColor="#0568CC"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

