<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.cliq.CliQSendPaymentFragment">

    <TextView
        android:id="@+id/passImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/tvAvailableAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="576.20 JOD"
        android:textAlignment="center"
        android:textColor="#656565"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passImg" />

    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvAvailableAmount"-->
    <!--        app:cardCornerRadius="8dp"-->
    <!--        app:cardElevation="4dp">-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAvailableAmount">

        <RadioGroup
            android:id="@+id/rgAliasType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:checked="true"
                android:text="@string/alias"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/radio_button_selector"
                android:button="@null"
                android:text="@string/mobile"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RadioGroup>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_alias_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/regester_rounded"
            android:drawablePadding="15dp"
            android:hint="@string/alias_value"
            android:inputType="number"
            android:maxLength="20"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:theme="@style/editTextPrimary"
            app:layout_constraintTop_toBottomOf="@id/rgAliasType" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_alias_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/regester_rounded"
            android:drawablePadding="15dp"
            android:hint="@string/amount_jod"
            android:inputType="number"
            android:maxLength="20"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:theme="@style/editTextPrimary"
            app:layout_constraintTop_toBottomOf="@id/et_alias_value" />

        <Button
            android:id="@+id/requestMoneyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_confirm_rejester"
            android:text="@string/request_money"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="#02434C"
            app:layout_constraintTop_toBottomOf="@id/et_alias_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




















