<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradiant"
    tools:context=".login.MainActivity">


    <TextView
        android:id="@+id/textWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:text="@string/iwallet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="sans-serif"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="33dp"
        android:gravity="center_vertical"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWallet">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/baseline_account_box_24"
            android:drawablePadding="15dp"
            android:hint="@string/username_07"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="14sp"
            android:theme="@style/editTextPrimary" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_editpas"
            android:drawableLeft="@drawable/userlock"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/round_corner"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:backgroundTint="#02434C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="33dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />


    <ImageView
        android:id="@+id/face_id"

        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/face_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget" />

    <TextView
        android:id="@+id/create"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="15dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/merchant"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/shop"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
